Projetos/ACBrLib/Demos/Java/NFe/Imports/ACBrLibNFe/src/com/acbr/nfe/ACBrNFe.java

package com.acbr.nfe;

import com.acbr.ACBrLibBase;
import com.acbr.ACBrSessao;
import com.sun.jna.Library;
import com.sun.jna.Native;
import com.sun.jna.Platform;
import com.sun.jna.ptr.IntByReference;

import java.io.File;
import java.nio.ByteBuffer;
import java.nio.file.Paths;
import java.text.DateFormat;
import java.text.SimpleDateFormat;
import java.util.Date;

public final class ACBrNFe extends ACBrLibBase {

    private interface ACBrNFeLib extends Library {

        static String JNA_LIBRARY_NAME = LibraryLoader.getLibraryName();
        public final static ACBrNFeLib INSTANCE = LibraryLoader.getInstance();

        class LibraryLoader {

            private static String library = "";
            private static ACBrNFeLib instance = null;

            private static String getLibraryName() {
                if (library.isEmpty()) {
                    if (Platform.isWindows()) {
                        library = Platform.is64Bit() ? "ACBrNFe64" : "ACBrNFe32";
                    } else {
                        library = Platform.is64Bit() ? "acbrnfe64" : "acbrnfe32";
                    }
                }
                return library;
            }

            public static ACBrNFeLib getInstance() {
                if (instance == null) {
                    instance = (ACBrNFeLib) Native.synchronizedLibrary(
                            (Library) Native.load(JNA_LIBRARY_NAME, ACBrNFeLib.class));
                }

                return instance;
            }
        }

        int NFE_Inicializar(String eArqConfig, String eChaveCrypt);

        int NFE_Finalizar();

        int NFE_Nome(ByteBuffer buffer, IntByReference bufferSize);

        int NFE_Versao(ByteBuffer buffer, IntByReference bufferSize);

        int NFE_UltimoRetorno(ByteBuffer buffer, IntByReference bufferSize);

        int NFE_ConfigImportar(String eArqConfig);

        int NFE_ConfigExportar(ByteBuffer buffer, IntByReference bufferSize);

        int NFE_ConfigLer(String eArqConfig);

        int NFE_ConfigGravar(String eArqConfig);

        int NFE_ConfigLerValor(String eSessao, String eChave, ByteBuffer buffer, IntByReference bufferSize);

        int NFE_ConfigGravarValor(String eSessao, String eChave, String valor);

        int NFE_CarregarXML(String eArquivoOuXML);

        int NFE_CarregarINI(String eArquivoOuINI);

        int NFE_ObterXml(Integer AIndex, ByteBuffer buffer, IntByReference bufferSize);

        int NFE_GravarXml(Integer AIndex, String eNomeArquivo, String ePathArquivo);

        int NFE_ObterIni(Integer AIndex, ByteBuffer buffer, IntByReference bufferSize);

        int NFE_GravarIni(Integer AIndex, String eNomeArquivo, String ePathArquivo);

        int NFE_LimparLista();

        int NFE_CarregarEventoXML(String eArquivoOuXml);

        int NFE_CarregarEventoINI(String eArquivoOuIni);

        int NFE_LimparListaEventos();

        int NFE_Assinar();

        int NFE_Validar();

        int NFE_ValidarRegrasdeNegocios(ByteBuffer buffer, IntByReference bufferSize);

        int NFE_VerificarAssinatura(ByteBuffer buffer, IntByReference bufferSize);

        int NFE_GerarChave(int ACodigoUF, int ACodigoNumerico, int AModelo, int ASerie, int ANumero,
                int ATpEmi, String AEmissao, String CPFCNPJ, ByteBuffer buffer, IntByReference bufferSize);

        int NFE_ObterCertificados(ByteBuffer buffer, IntByReference bufferSize);

        int NFE_OpenSSLInfo(ByteBuffer buffer, IntByReference bufferSize);

        int NFE_GetPath(int tipo, ByteBuffer buffer, IntByReference bufferSize);

        int NFE_GetPathEvento(String aCodEvento, ByteBuffer buffer, IntByReference bufferSize);

        int NFE_StatusServico(ByteBuffer buffer, IntByReference bufferSize);

        int NFE_Consultar(String eChaveOuNFe, boolean AExtrairEventos, ByteBuffer buffer, IntByReference bufferSize);

        int NFE_Inutilizar(String ACNPJ, String AJustificativa, int Ano, int Modelo, int Serie,
                int NumeroInicial, int NumeroFinal, ByteBuffer buffer, IntByReference bufferSize);

        int NFE_Enviar(int ALote, boolean Imprimir, boolean sincrono, boolean zipado, ByteBuffer buffer, IntByReference bufferSize);

        int NFE_ConsultarRecibo(String aRecibo, ByteBuffer buffer, IntByReference bufferSize);

        int NFE_ConsultaCadastro(String cUF, String nDocumento, Boolean nIE, ByteBuffer buffer, IntByReference bufferSize);

        int NFE_Cancelar(String eChave, String eJustificativa, String eCNPJ, int ALote,
                ByteBuffer buffer, IntByReference bufferSize);

        int NFE_EnviarEvento(int idLote, ByteBuffer buffer, IntByReference bufferSize);

        int NFE_DistribuicaoDFePorUltNSU(int AcUFAutor, String eCNPJCPF, String eultNsu, ByteBuffer buffer,
                IntByReference bufferSize);

        int NFE_DistribuicaoDFePorNSU(int AcUFAutor, String eCNPJCPF, String eNSU,
                ByteBuffer buffer, IntByReference bufferSize);

        int NFE_DistribuicaoDFePorChave(int AcUFAutor, String eCNPJCPF, String echNFe,
                ByteBuffer buffer, IntByReference bufferSize);

        int NFE_EnviarEmail(String ePara, String eChaveNFe, boolean AEnviaPDF, String eAssunto,
                String eCC, String eAnexos, String eMensagem);

        int NFE_EnviarEmailEvento(String ePara, String eChaveEvento, String eChaveNFe,
                boolean AEnviaPDF, String eAssunto, String eCC, String eAnexos, String eMensagem);

        int NFE_Imprimir(String cImpressora, int nNumCopias, String cProtocolo,
                String bMostrarPreview, String cMarcaDagua, String bViaConsumidor, String bSimplificado);

        int NFE_ImprimirPDF();

        int NFE_ImprimirEvento(String eArquivoXmlNFe, String eArquivoXmlEvento);

        int NFE_ImprimirEventoPDF(String eArquivoXmlNFe, String eArquivoXmlEvento);

        int NFE_ImprimirInutilizacao(String eArquivoXml);

        int NFE_ImprimirInutilizacaoPDF(String eArquivoXml);
    }

    public ACBrNFe() throws Exception {
        File iniFile = Paths.get(System.getProperty("user.dir"), "ACBrLib.ini").toFile();
        if (!iniFile.exists()) {
            iniFile.createNewFile();
        }

        int ret = ACBrNFeLib.INSTANCE.NFE_Inicializar(toUTF8(iniFile.getAbsolutePath()), toUTF8(""));
        checkResult(ret);
    }

    public ACBrNFe(String eArqConfig, String eChaveCrypt) throws Exception {
        int ret = ACBrNFeLib.INSTANCE.NFE_Inicializar(toUTF8(eArqConfig), toUTF8(eChaveCrypt));
        checkResult(ret);
    }

    @Override
    protected void dispose() throws Exception {
        int ret = ACBrNFeLib.INSTANCE.NFE_Finalizar();
        checkResult(ret);
    }

    public String nome() throws Exception {
        ByteBuffer buffer = ByteBuffer.allocate(STR_BUFFER_LEN);
        IntByReference bufferLen = new IntByReference(STR_BUFFER_LEN);

        int ret = ACBrNFeLib.INSTANCE.NFE_Nome(buffer, bufferLen);
        checkResult(ret);

        return fromUTF8(buffer, bufferLen.getValue());
    }

    public String versao() throws Exception {
        ByteBuffer buffer = ByteBuffer.allocate(STR_BUFFER_LEN);
        IntByReference bufferLen = new IntByReference(STR_BUFFER_LEN);

        int ret = ACBrNFeLib.INSTANCE.NFE_Versao(buffer, bufferLen);
        checkResult(ret);

        return fromUTF8(buffer, bufferLen.getValue());
    }

    public void configLer() throws Exception {
        configLer("");
    }

    public void configLer(String eArqConfig) throws Exception {
        int ret = ACBrNFeLib.INSTANCE.NFE_ConfigLer(toUTF8(eArqConfig));
        checkResult(ret);
    }

    public void configGravar() throws Exception {
        configGravar("");
    }

    public void configGravar(String eArqConfig) throws Exception {
        int ret = ACBrNFeLib.INSTANCE.NFE_ConfigGravar(toUTF8(eArqConfig));
        checkResult(ret);
    }

    @Override
    public String configLerValor(ACBrSessao eSessao, String eChave) throws Exception {
        ByteBuffer buffer = ByteBuffer.allocate(STR_BUFFER_LEN);
        IntByReference bufferLen = new IntByReference(STR_BUFFER_LEN);

        int ret = ACBrNFeLib.INSTANCE.NFE_ConfigLerValor(toUTF8(eSessao.name()), toUTF8(eChave), buffer, bufferLen);
        checkResult(ret);

        return processResult(buffer, bufferLen);
    }

    @Override
    public void configGravarValor(ACBrSessao eSessao, String eChave, Object value) throws Exception {
        int ret = ACBrNFeLib.INSTANCE.NFE_ConfigGravarValor(toUTF8(eSessao.name()), toUTF8(eChave), toUTF8(value.toString()));
        checkResult(ret);
    }

    public void carregarXml(String eArquivoOuXML) throws Exception {
        int ret = ACBrNFeLib.INSTANCE.NFE_CarregarXML(toUTF8(eArquivoOuXML));
        checkResult(ret);
    }

    public String obterXml(int AIndex) throws Exception {
        ByteBuffer buffer = ByteBuffer.allocate(STR_BUFFER_LEN);
        IntByReference bufferLen = new IntByReference(STR_BUFFER_LEN);
        int ret = ACBrNFeLib.INSTANCE.NFE_ObterXml(AIndex, buffer, bufferLen);
        checkResult(ret);

        return processResult(buffer, bufferLen);
    }

    public void gravarXml(int AIndex) throws Exception {
        gravarXml(AIndex, "", "");
    }

    public void gravarXml(int AIndex, String eNomeArquivo) throws Exception {
        gravarXml(AIndex, eNomeArquivo, "");
    }

    public void gravarXml(int AIndex, String eNomeArquivo, String ePathArquivo) throws Exception {
        int ret = ACBrNFeLib.INSTANCE.NFE_GravarXml(AIndex, toUTF8(eNomeArquivo), toUTF8(ePathArquivo));
        checkResult(ret);
    }

    public String obterIni(int AIndex) throws Exception {
        ByteBuffer buffer = ByteBuffer.allocate(STR_BUFFER_LEN);
        IntByReference bufferLen = new IntByReference(STR_BUFFER_LEN);
        int ret = ACBrNFeLib.INSTANCE.NFE_ObterIni(AIndex, buffer, bufferLen);
        checkResult(ret);

        return processResult(buffer, bufferLen);
    }

    public void gravarIni(int AIndex) throws Exception {
        gravarIni(AIndex, "", "");
    }

    public void gravarIni(int AIndex, String eNomeArquivo) throws Exception {
        gravarIni(AIndex, eNomeArquivo, "");
    }

    public void gravarIni(int AIndex, String eNomeArquivo, String ePathArquivo) throws Exception {
        int ret = ACBrNFeLib.INSTANCE.NFE_GravarIni(AIndex, toUTF8(eNomeArquivo), toUTF8(ePathArquivo));
        checkResult(ret);
    }

    public void carregarIni(String eArquivoOuIni) throws Exception {
        int ret = ACBrNFeLib.INSTANCE.NFE_CarregarINI(toUTF8(eArquivoOuIni));
        checkResult(ret);
    }

    public void limparLista() throws Exception {
        int ret = ACBrNFeLib.INSTANCE.NFE_LimparLista();
        checkResult(ret);
    }

    public void carregarEventoXml(String eArquivoOuXML) throws Exception {
        int ret = ACBrNFeLib.INSTANCE.NFE_CarregarEventoXML(toUTF8(eArquivoOuXML));
        checkResult(ret);
    }

    public void carregarEventoINI(String eArquivoOuIni) throws Exception {
        int ret = ACBrNFeLib.INSTANCE.NFE_CarregarEventoINI(toUTF8(eArquivoOuIni));
        checkResult(ret);
    }

    public void limparListaEventos() throws Exception {
        int ret = ACBrNFeLib.INSTANCE.NFE_LimparListaEventos();
        checkResult(ret);
    }

    public void assinar() throws Exception {
        int ret = ACBrNFeLib.INSTANCE.NFE_Assinar();
        checkResult(ret);
    }

    public void validar() throws Exception {
        int ret = ACBrNFeLib.INSTANCE.NFE_Validar();
        checkResult(ret);
    }
